--- a/conf/config.ini
+++ b/conf/config.ini
@@ -12,20 +12,20 @@ theme = "default"
 owner = no
 
 [nav]
-data_link = "url = http://rutorrent.domaine.fr, name = rutorrent
-url = http://cakebox.domaine.fr, name = cakebox"
+data_link = "url = http://www.atithasos.biz/seedbox, name = rutorrent
+url = http://www.atithasos.biz/seedbox/cart.php, name = Support"
 
 [ftp]
 active_ftp = yes
-port_ftp = "21"
-port_sftp = "22"
+port_ftp = "21976"
+port_sftp = "21976"
 
 [rtorrent]
 active_reboot = yes
 
 [support]
 active_support = yes
-adresse_mail = "contact@exemple.com"
+adresse_mail = "support@atithasos.biz"
 
 [logout]
-url_redirect = "http://mondedie.fr"
+url_redirect = "http://www.atithasos.biz/seedbox/cart.php"
