--- a/conf/config.ini
+++ b/conf/config.ini
@@ -13,7 +13,7 @@ owner = no
 
 [nav]
 data_link = "url = http://www.atithasos.biz/seedbox, name = rutorrent
-url = http://www.atithasos.biz/seedbox/cart.php, name = Support"
+url = http://www.atithasos.biz/seedbox/cart.php, name = Υποστήριξη"
 
 [ftp]
 active_ftp = yes
