--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "seedbox-manager",
-  "version": "2.4.1",
+  "name": "Atithasos",
+  "version": "1.0.1",
   "authors": [
-    "Magicalex <magicalex14000@gmail.com>"
+    "Atithasos <atithasos@gmail.com>"
   ],
   "description": "Web app for manage your seedbox",
   "private": true,
