--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,8 +1,8 @@
-; Manager de seedbox (adapté pour le tuto de mondedie.fr)
+; Manager of the seedbox (founded from atithasos.biz)
 ;
-; Fichier de configuration :
-; yes ou no pour activer les modules
-; Si vous n'avez pas de nom de domaine, indiquez l'ip (ex: http://XX.XX.XX.XX/rutorrent)
+; The main configuration :
+; yes or no to activate the modules
+; If you have not a domain name then use your IP (ex: http://XX.XX.XX.XX/rutorrent)
 
 [user]
 active_bloc_info = yes
@@ -12,8 +12,10 @@ theme = "default"
 owner = no
 
 [nav]
-data_link = "url = http://www.atithasos.biz/seedbox, name = rutorrent
-url = http://www.atithasos.biz/seedbox/cart.php, name = Υποστήριξη"
+data_link = "url = http://seedbox-069.atithasos.biz/rutorrent, name = rutorrent
+url = http://seedbox-069.atithasos.biz:32400/web, name = Media Server
+url = http://seedbox-069.atithasos.biz:8888, name = BTSync
+url = http://www.atithasos.biz/seedbox/submitticket.php?step=2&deptid=1, name = Υποστήριξη"
 
 [ftp]
 active_ftp = yes
